# tdw-control-plane

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  clickhouse-config.xml  dagster.yaml  dagster_cloud.yaml  docker-compose.yml  docker-requirements.txt  init-letsencrypt.sh  pyproject.toml  requirements.txt  setup-jupyter.sh  setup.py  workspace.yaml
.github/ISSUE_TEMPLATE/: RFC-Template.md
.github/workflows/: branch_deployments.yml  deploy-env.yml  deploy-image-to-registry.yml  deploy-image-to-server.yml  deploy-to-production-on-merge.yml  deploy-to-production.yml  deploy-to-prodution.yml  deploy.yml  pr-merge-to-image.yml  pr-verification.yml  publish-image-on-merge.yml
.telemetry/: id.yaml
nginx/: nginx.conf
plugins/: sample-database.db.mv.db  sample-database.db.trace.db
quickstart_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tdw_control_plane/: binance_downloader.py  definitions.py
tdw_control_plane/assets/: README.md  __init__.py  binance_downloader.py  binance_extractor.py  clickhouse_loader.py  create_binance_agg_trades_table.py  create_binance_futures_trades_table.py  create_binance_trades_daily_summary.py  create_binance_trades_day_of_month_summary.py  create_binance_trades_hour_of_day_summary.py  create_binance_trades_hourly_summary.py  create_binance_trades_month_of_year_summary.py  create_binance_trades_monthly_summary.py  create_binance_trades_table.py  create_binance_trades_week_of_year_summary.py  create_clickhouse_database.py  create_tdw_database.py  create_tdw_database_v2.py  daily_trades_to_clickhouse.py  (+8 more)
(+9 files in other folders)
